<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="FIO" Id="{f5309443-5b5c-4020-8280-6e043b3c29d5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//	Sensor/Actuator	 Data TYPE	 Name	 Address	 Current Value
	//	Sensor	BOOL	FACTORY I/O (Running)	496	FALSE
	//	Sensor	Bool	FACTORY I/O (Paused)	497	FALSE
	//	Sensor	Bool	FACTORY I/O (Reset)	498	FALSE
//	bStart : BOOL;//	Sensor	Bool	Start	0	FALSE
//	bStop : BOOL;//	Sensor	Bool	Stop	1	TRUE
//	bReset : BOOL;//	Sensor	Bool	Reset	2	FALSE
	//	Sensor	Float	FACTORY I/O (Time Scale)	240	0
	rFlowMeter : REAL;	//	Sensor	Float	Flow meter	1	0
	rLevelMeter : REAL;	//	Sensor	Float	Level meter	0	0
	rSetPoint : REAL;	//	Sensor	Float	Setpoint	2	0
	//	Actuator	Bool	FACTORY I/O (Run)	496	FALSE
	//	Actuator	Bool	FACTORY I/O (Pause)	497	FALSE
	//	Actuator	Bool	FACTORY I/O (Reset)	498	FALSE
	//	Actuator	Bool	Start light	0	FALSE
	//	Actuator	Bool	Stop light	1	FALSE
	//	Actuator	Bool	Reset light	2	FALSE
	rDischargeValve : REAL;//	Actuator	Float	Discharge valve	1	0
	rFillValve : REAL;//	Actuator	Float	Fill valve	0	0
	//	Actuator	Int	FACTORY I/O (Camera Position)	240	0
	//	Actuator	Int	SP	0	0
	//	Actuator	Int	PV	1	0

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>